# indexlink

./: .env.example  .gitignore  AGENTS.md  API_MANAGEMENT.md  CHANGE_LOG.md  Cargo.toml  readme.en.md  readme.md
.github/workflows/: rust-ci.yml
apps/server/: Cargo.toml
apps/server/src/: config.rs  main.rs  shutdown.rs
apps/web/: PLAN.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/api/: mock.ts  queries.ts  types.ts
apps/web/src/components/layout/: app-header.tsx  app-layout.tsx  app-sidebar.tsx  news-ticker.tsx
apps/web/src/i18n/: index.ts
apps/web/src/i18n/locales/: en.ts  zh.ts
apps/web/src/lib/: decision.ts
apps/web/src/pages/dashboard/: comparison-chart.tsx  index.tsx  latest-decision-card.tsx  returns-cards.tsx  risk-card.tsx  score-cards.tsx  valuation-card.tsx
apps/web/src/pages/decisions/: index.tsx
apps/web/src/pages/plans/: index.tsx
apps/web/src/stores/: ui.ts
crates/ai-client/src/: error.rs  lib.rs  mock.rs  news.rs
crates/ai-client/tests/: client.rs  news.rs  provider.rs  sentiment.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  state.rs
crates/api/src/routes/: decision_preview.rs  decision_records.rs  health.rs  investment_plans.rs  market_sentiment.rs  mod.rs  ready.rs
crates/api/tests/: decision_preview.rs  decision_records.rs  health.rs  investment_plans.rs  market_sentiment.rs
crates/broker/: Cargo.toml
crates/broker/src/: lib.rs  opend_session.rs
crates/core-domain/src/: lib.rs
crates/decision-engine/: Cargo.toml
crates/decision-engine/src/: lib.rs
crates/decision-records/: Cargo.toml
crates/decision-records/src/: lib.rs
crates/investment-plans/: Cargo.toml
crates/investment-plans/src/: lib.rs
crates/quant-engine/: Cargo.toml
crates/quant-engine/src/: lib.rs  percentile.rs
crates/quant-engine/src/fundamental/: mod.rs
crates/quant-engine/src/trend/: mod.rs
crates/quant-engine/tests/: DEFERRED_TESTS.md  fundamental.rs  percentile.rs  trend.rs
crates/quant-engine/tests/common/: mod.rs
crates/quant-engine/tests/trend/: config.rs  direction.rs  errors.rs  indicators.rs  regime.rs
crates/storage/: Cargo.toml
crates/storage/src/: decision_records.rs  lib.rs  sqlite.rs  sqlite_decision_records.rs  sqlite_investment_plans.rs
deployment/: Dockerfile  docker-compose.yml
docs/: minimum_mvp.md
migrations/: 20260711093000_create_decision_records.sql
migrations/sqlite/: 20260715010000_create_investment_plans.sql  20260715011000_create_decision_records.sql  20260715012000_reject_null_decision_record_snapshots.sql
