[workspace]
resolver = "2"
members = [
    "crates/core-domain",
    "crates/quant-engine",
    "crates/investment-plans",
    "crates/storage",
    "crates/api",
    "crates/ai-client",
    "crates/broker",
    "crates/decision-engine",
    "crates/decision-records",
    "apps/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
core-domain = { path = "crates/core-domain" }
ai-client = { path = "crates/ai-client" }
broker = { path = "crates/broker" }
decision-engine = { path = "crates/decision-engine" }
decision-records = { path = "crates/decision-records" }
investment-plans = { path = "crates/investment-plans" }
indexlink-storage = { path = "crates/storage" }
indexlink-api = { path = "crates/api" }
quant-engine = { path = "crates/quant-engine" }
async-trait = "0.1"
axum = "0.7"
dotenvy = "0.15"
rust_decimal = { version = "1", default-features = false, features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["macros", "migrate", "postgres", "runtime-tokio-rustls", "sqlite"] }
thiserror = "2"
time = { version = "0.3", default-features = false, features = ["serde", "serde-well-known"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
quick-xml = "0.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", default-features = false, features = ["serde"] }
