[package]
name = "indexlink-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
ai-client.workspace = true
dotenvy.workspace = true
indexlink-api.workspace = true
indexlink-storage.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
