[package]
name = "indexlink-api"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
ai-client.workspace = true
broker.workspace = true
core-domain.workspace = true
decision-engine.workspace = true
investment-plans.workspace = true
indexlink-storage.workspace = true
quant-engine.workspace = true
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util = "0.1"
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
