[package]
name = "broker"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }

[dev-dependencies]
tokio.workspace = true
