[package]
name = "investment-plans"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
